[package]
name = "scuda"
version = "0.1.0"
edition = "2021"

[lib]
name         = "scuda"
crate-type   = ["rlib", "cdylib"]
path         = "src/lib.rs"

[[bin]]
name = "scuda-server"
path = "src/main.rs"
required-features = ["disable-preload"]

[features]
disable-preload = []

[dependencies]
libc = "0.2.155"
nvml-wrapper-sys = "0.8.0"
anyhow = "1.0.86"
futures = "0.3.30"
tarpc = { version = "0.34.0", features = ["full"] }
tokio = { version = "1.39.2", features = ["macros", "rt", "rt-multi-thread"] }