[package]
name = "scuda-client"
version = "0.1.0"
edition = "2021"

[lib]
name         = "scuda"
crate-type   = ["rlib", "cdylib"]

[dependencies]
libc = "0.2.155"
nvml-wrapper-sys = "0.8.0"
tarpc = { version = "0.34.0", features = ["full"] }
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread"] }
scuda-api = { path = "../api" }