[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scuda"
version = "0.1.0"
description = "Small PyTorch adapter helpers for SCUDA-backed CUDA devices"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
torch = ["torch"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["scuda"]
