[package]
name = "scuda-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
libc = "0.2.155"
nvml-wrapper-sys = "0.8.0"
tarpc = { version = "0.34.0", features = ["full"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
scuda-api = { path = "../api" }